@@ -1,7 +1,7 @@
 {
-  "timestamp" : "2022-05-07T16:09:18Z",
-  "count" : 50,
-  "count_minmax" : [ 0, 50 ],
+  "timestamp" : "2022-05-08T00:36:51Z",
+  "count" : 97,
+  "count_minmax" : [ 0, 97 ],
   "count_prev_day_inc" : 111,
   "count_prev_day_dec" : 0,
   "uniques" : 2,
