@@ -1,0 +1,11 @@
+{
+  "timestamp" : "2022-05-08T00:36:51Z",
+  "count" : 0,
+  "count_minmax" : [ 0, 0 ],
+  "count_prev_day_inc" : 47,
+  "count_prev_day_dec" : 0,
+  "uniques" : 0,
+  "uniques_minmax" : [ 0, 0 ],
+  "uniques_prev_day_inc" : 0,
+  "uniques_prev_day_dec" : 0
+}
