@@ -1,3 +1,9 @@
+2022-05-08T00:36:51Z:
+* notice: last 14d: all unq: 348 2
+* notice: prev accum: outdated-all outdated-unq / all unq: 1048 66 / 1349 75
+* notice: next accum: outdated-all outdated-unq / all unq: 1048 66 / 1396 75
+* notice: prev json diff // prev day diff: unq all: +0 +47 / -0 -0 // +0 +47 / -0 -0
+
 2022-05-07T16:09:18Z:
 * notice: last 14d: all unq: 301 2
 * notice: prev accum: outdated-all outdated-unq / all unq: 1048 66 / 1300 74
